fixed ios safari overflow

--- a/style.css
+++ b/style.css
@@ -49,17 +49,17 @@ header {
 .mobile-nav-overlay {
   display: none;
   position: fixed;     /* Fixes it relative to the viewport */
-  bottom: 0;           /* Sticks it to the bottom */
+  bottom: 0px;           /* Sticks it to the bottom */
   left: 0;             /* Aligns to the left edge */
   z-index: 999;       /* Keeps it above other elements */
   position: absolute;             /* ✅ new: sticks inside the scrollable container */
   width: 100%;
-  height: 100px;
+  height: calc(128px + env(safe-area-inset-bottom));
   pointer-events: none;         /* doesn’t block mouse/scroll */
   background: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0) 0%,
-    rgba(255,255,255,1) 90%
+    rgba(255,255,255,1) 70%
   );
 }
 
@@ -1291,6 +1291,7 @@ header {
   }
 
   .section3-wrapper {
+    height: calc(80vh - 20px - 56px - 36px - 32px);
     align-items: normal;
   }
 
@@ -1300,6 +1301,8 @@ header {
     flex: 1 0 0;
     width: 100%;
     gap: 32px;
+    overflow-y: scroll;
+    padding-bottom: 64px;
   }
 
   .cv-experience-item {
@@ -1333,6 +1336,10 @@ header {
   .mobile-nav-overlay {
     display: block;
   }
+
+  .section1-wrapper {
+  min-height: calc(80vh - 56px - 36px);
+}
 
   .modal-hero-image {
     display: none;
